# fastlogging-rs

./: .gitignore  .rumdl.toml  CHANGELOG.md  Cargo.toml  README.md  jfastlogging.json  lints.toml  log4j.json  log4j2.json
cfastlogging/: Cargo.toml  Makefile  README.md  cfastlogging.h
cfastlogging/doc/: CONFIG.md  DEF.md  EXAMPLES.md  LOGGER.md  LOGGING.md  ROOT.md
cfastlogging/examples/: README.md  callback.c  console  console.c  console_add_writer.c  console_root.c  console_static.c  default.c  ext_config.c  file.c  file_add_writer.c  get_server_addresses_ports.c  get_server_configs.c  init.c  net_unencrypted_one_client.c  syslog.c  threads.c
cfastlogging/h/: cfastlogging.h  def.h  logger.h  logging.h  root.h  writer.h
cfastlogging/src/: def.rs  error.rs  lib.rs  logger.rs  logging.rs  root.rs  util.rs  writer.rs
cxxfastlogging/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
cxxfastlogging/doc/: API.md  CONFIG.md  EXAMPLES.md  LEVELS.md  LOGGER.md  LOGGING.md  NETWORK.md  README.md  ROOT.md  WRITERS.md
cxxfastlogging/examples/: console.cpp
cxxfastlogging/h/: fastlogging.h
cxxfastlogging/src/: fastlogging.cc  lib.rs
cxxfastlogging/tests/: basic.rs
fastlogging/: Cargo.toml  README.md
fastlogging/benches/: benchmarks.rs
fastlogging/doc/: CONFIG.md  EXAMPLES.md  LEVELS.md  LOGGER.md  LOGGING.md  NETWORK.md  README.md  ROOT.md  WRITERS.md  all.html  constant.CRITICAL.html  constant.DEBUG.html  constant.ERROR.html  constant.EXCEPTION.html  constant.FATAL.html  constant.INFO.html  constant.NOLOG.html  constant.NOTSET.html  constant.SUCCESS.html  constant.TRACE.html  constant.WARN.html  constant.WARNING.html  enum.ClientTypeEnum.html  enum.CompressionMethodEnum.html  enum.EncryptionMethod.html  enum.LevelSyms.html  enum.LoggingError.html  enum.LoggingTypeEnum.html  enum.MessageStructEnum.html  enum.SyslogTypeEnum.html  enum.WriterConfigEnum.html  enum.WriterEnum.html  enum.WriterTypeEnum.html  fn.getppid.html  fn.level2short.html  fn.level2str.html  fn.level2string.html  fn.level2sym.html  fn.logging_new_default.html  index.html  (+18 more)
fastlogging/doc/callback/: struct.CallbackWriter.html  struct.CallbackWriterConfig.html
fastlogging/doc/console/: struct.ConsoleWriter.html  struct.ConsoleWriterConfig.html
fastlogging/doc/def/: constant.CRITICAL.html  constant.DEBUG.html  constant.ERROR.html  constant.EXCEPTION.html  constant.FATAL.html  constant.INFO.html  constant.NOLOG.html  constant.NOTSET.html  constant.SUCCESS.html  constant.TRACE.html  constant.WARN.html  constant.WARNING.html  enum.LevelSyms.html  enum.LoggingTypeEnum.html  enum.MessageStructEnum.html  enum.WriterConfigEnum.html  enum.WriterEnum.html  enum.WriterTypeEnum.html  fn.level2short.html  fn.level2str.html  fn.level2string.html  fn.level2sym.html  struct.RootConfig.html
fastlogging/doc/error/: enum.LoggingError.html
fastlogging/doc/file/: enum.CompressionMethodEnum.html  struct.FileWriter.html  struct.FileWriterConfig.html
fastlogging/doc/logger/: struct.Logger.html
fastlogging/doc/logging/: struct.Logging.html
fastlogging/doc/root/: fn.add_logger.html  fn.add_writer.html  fn.add_writer_config.html  fn.add_writer_configs.html  fn.add_writers.html  fn.critical.html  fn.debug.html  fn.disable.html  fn.disable_type.html  fn.enable.html  fn.enable_type.html  fn.error.html  fn.exception.html  fn.fatal.html  fn.get_config_string.html  fn.get_parent_client_writer_config.html  fn.get_parent_pid.html  fn.get_parent_pid_client_writer_config.html  fn.get_root_server_address_port.html  fn.get_server_addresses.html  fn.get_server_addresses_ports.html  fn.get_server_auth_key.html  fn.get_server_config.html  fn.get_server_configs.html  fn.get_server_ports.html  fn.get_writer_config.html  fn.get_writer_configs.html  fn.info.html  fn.remove_logger.html  fn.remove_writer.html  fn.remove_writers.html  fn.root_init.html  fn.rotate.html  fn.save_config.html  fn.set_debug.html  fn.set_domain.html  fn.set_encryption.html  fn.set_ext_config.html  fn.set_level.html  fn.set_level2sym.html  (+12 more)
fastlogging/doc/syslog/: enum.SyslogTypeEnum.html  struct.SyslogWriter.html  struct.SyslogWriterConfig.html
fastlogging/doc/unix/: fn.getppid.html
fastlogging/examples/: callback.rs  console.rs  console_add_writer.rs  console_static.rs  default.rs  default_logger.rs  eventlog.rs  ext_config.rs  file.rs  file_add_writer.rs  fork.rs  get_server_addresses_ports.rs  get_server_configs.rs  init.rs  init_static.rs  net_unencrypted_one_client.rs  new.rs  simple.rs  spawn.rs  syslog.rs  threads.rs  write_config_file.rs
fastlogging/src/: callback.rs  config.rs  console.rs  def.rs  error.rs  eventlog.rs  file.rs  lib.rs  logger.rs  logging.rs  root.rs  syslog.rs  unix.rs  windows.rs
fastlogging/src/config/: common.rs  file.rs  instance.rs  mod.rs
fastlogging/src/net/: client.rs  def.rs  encryption.rs  mod.rs  server.rs
jsfastlogging/: Cargo.toml  README.md  build.sh
jsfastlogging/node/: console.js
jsfastlogging/src/: lib.rs  logger.rs  logging.rs
jsfastlogging/www/: bootstrap.js  index.html  index.js  package.json  webpack.config.js
pyfastlogging/: Cargo.toml  README.md  pyproject.toml
pyfastlogging/.run/: benchmark.run.xml
pyfastlogging/benches/: benchmark.py
pyfastlogging/doc/: API.md  CONFIG.md  DEF.md  EXAMPLES.md  LOGGER.md  LOGGING.md  ROOT.md  WRITERS.md
pyfastlogging/doc/benchmarks/: benchmarks.html  file_exc_long.html  file_exc_short.html  file_long.html  file_short.html  index.html  linux.html  log_exc_long.html  log_exc_short.html  log_long.html  log_short.html  nolog_exc_long.html  nolog_exc_short.html  nolog_long.html  nolog_short.html  python_linux.json  python_windows.json  rotate_exc_long.html  rotate_exc_short.html  rotate_long.html  rotate_short.html  (+4 more)
pyfastlogging/examples/: callback.py  console.py  console_add_writer.py  console_default.py  console_mp.py  default.py  file.py  fork.py  net_unencrypted_one_client.py  pool.py  pool_spawn.py  root_file.py  spawn.py  syslog.py  threads.py
pyfastlogging/src/: def.rs  error.rs  lib.rs  logger.rs  logging.rs  root.rs  writer.rs
(+218 files in other folders)
