[workspace]

resolver = "2"

members = [
    "fastlogging",
    "pyfastlogging",
    "cfastlogging",
    "cxxfastlogging",
    #"cppfastlogging",  --> Use make
    #"gofastlogging",  --> Use make
    "jfastlogging-jni",
    #"jfastlogging-ffm",
]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
#panic = "abort"
