[package]
name = "cfastlogging"
version = "0.3.0"
edition = "2024"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brmmm3/fastlogging-rs"
homepage = "https://github.com/brmmm3/fastlogging-rs"
readme = "README.md"
keywords = ["logging"]
include = [
    "Cargo.toml",
    "src/*",
    "tests/*.rs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
name = "cfastlogging"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
once_cell = "1.21"
rand = "0.9"
fastlogging = { path = "../fastlogging", version = "0.3.0" }
