[package]
name = "cxxfastlogging"
version = "0.8.0"
edition = "2024"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brmmm3/fastlogging-rs"
homepage = "https://github.com/brmmm3/fastlogging-rs"
readme = "README.md"
keywords = ["logging"]
include = [
    "Cargo.toml",
    "src/*",
    "tests/*.rs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
name = "cxxfastlogging"
crate-type = ["staticlib", "rlib"]

[dependencies]
fastlogging = { path = "../fastlogging", version = "0.8.0" }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
