[package]
name = "fastlogging"
version = "0.3.0"
edition = "2021"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brmmm3/fastlogging-rs"
homepage = "https://github.com/brmmm3/fastlogging-rs"
readme = "README.md"
keywords = ["logging"]
include = [
    "Cargo.toml",
    "src/*",
    "tests/*.rs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
thiserror = "1.0"
gethostname = "0.5"
syslog = "7.0"
flume = "0.11"
chrono = "0.4"
num_cpus = "1.16"
threadpool = "1.8"
thread-id = "4.2"
termcolor = "1.4"
once_cell = "1.19"
zip = { version = "2.1", default-features = false, features = [
    "deflate",
    "zstd",
    "lzma",
] }
rand = "0.8"
ring = "0.17"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9", optional = true }
quick-xml = { version = "0.36", features = ["serialize"], optional = true }
windows-sys = { version = "0.59", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempdir = "0.3"

[target.'cfg(unix)'.dev-dependencies]
fork = "0.2"

#[[bench]]
#name = "benchmarks"
#path = "benches/benchmarks.rs"
#harness = false

[features]
default = ["config_json", "config_xml", "config_yaml"]
config_json = ["dep:serde", "dep:serde_derive"]
config_xml = ["dep:serde", "dep:serde_derive", "dep:quick-xml"]
config_yaml = ["dep:serde", "dep:serde_derive", "dep:serde_yaml"]
