[package]
name = "fastlogging-rs"
version = "0.2.0"
edition = "2021"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brmmm3/fastlogging-rs"
homepage = "https://github.com/brmmm3/fastlogging-rs"
readme = "README.md"
keywords = ["logging"]
include = [
    "Cargo.toml",
    "pyproject.toml",
    "src/*",
    "test/*.py",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[lib]
name = "fastlogging_rs"
crate-type = ["cdylib"]

[dependencies]
flume = "0.11"
once_cell = "1.19"
zip = { version = "2.1", default-features = false, features = [
    "deflate",
    "zstd",
    "lzma",
] }
pyo3 = { version = "0.22", features = ["extension-module"] }
fastlogging = { path = "../fastlogging", version = "0.2.0" }
