[package]
name = "pyfastlogging"
version = "0.3.0"
edition = "2024"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brmmm3/fastlogging-rs"
homepage = "https://github.com/brmmm3/fastlogging-rs"
readme = "README.md"
keywords = ["logging"]
include = [
    "Cargo.toml",
    "pyproject.toml",
    "src/*",
    "test/*.py",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[lib]
name = "pyfastlogging"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.21"
pyo3 = { version = "0.25", features = ["extension-module"] }
fastlogging = { path = "../fastlogging", version = "0.3.0" }
